--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@upstash/ratelimit": "^1.2.1",
+    "@upstash/redis": "^1.31.6",
     "bcryptjs": "^2.4.3",
+    "edge-csrf": "^2.0.0-rc7",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.4",
     "react-hook-form": "^7.52.0",
     "resend": "^3.4.0",
     "superjson": "^2.2.1",
